test/e2e/fail_compile/const_eval/assert_in_called_function.cst
fn check(value: num) {
    assert_eq(value, 1);
}

fn main() {
    check(2);
}
